--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.1",
     "axios": "^1.8.4",
     "nanoid": "^5.1.5",
