--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-piano": "^3.1.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
